[workspace]
resolver = "2"

members = [
    "tools/gtld",
    "tools/gtgo",
    "tools/gtrom",
    "tools/gte/core",
    "tools/gte/core/gte-acp",
    "tools/gte/core/gte-w65c02s",
    "tools/gte/frontend",
    "tools/gte/libretro",
]

exclude = [
    "sdk/audio",
    "sdk/rom",
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Conditions for После update is run)
cargo-dist-version = "0.30.2"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target triples)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
pr-run-mode = "plan"

# System dependencies for Linux builds
[workspace.metadata.dist.dependencies.apt]
libasound2-dev = "*"
libjack-jackd2-dev = "*"
libudev-dev = "*"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
