[workspace]
resolver = "2"

members = [
    "tools",
    "tools/gte/core",
    "tools/gte/core/gte-acp",
    "tools/gte/core/gte-w65c02s",
    "tools/gte/libretro",
]

exclude = [
    "sdk/audio",
    "sdk/rom",
    "examples",
    "examples/*",
]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
