[package]
name = "gametank-sdk"
version = "0.16.0"
edition = "2021"
description = "GameTank SDK - Complete toolkit for GameTank development"
license = "MIT"
authors = ["Devin Brite <dwbrite@gmail.com>"]
homepage = "https://github.com/dwbrite/gametank-sdk"
repository = "https://github.com/dwbrite/gametank-sdk"

[package.metadata.wix]
upgrade-guid = "A1B2C3D4-E5F6-7890-ABCD-EF1234567890"
path-guid = "B2C3D4E5-F6A7-8901-BCDE-F12345678901"
license = false
eula = false

[[bin]]
name = "gte"
path = "src/bin/gte/main.rs"

[[bin]]
name = "gtrom"
path = "src/bin/gtrom/main.rs"

[[bin]]
name = "gtgo"
path = "src/bin/gtgo/main.rs"

[[bin]]
name = "gtld"
path = "src/bin/gtld/main.rs"

[dependencies]
# gte dependencies
gte-core = { path = "gte/core", version = "0.16.0" }
winit = { version = "0.30", features = ["rwh_06"] }
egui = { version = "0.31" }
egui_extras = "0.31"
egui-wgpu = { version = "0.31", features = ["winit"] }
egui-winit = { version = "0.31", default-features = false, features = ["links", "wayland", "x11"] }
wgpu = { version = "24.0", features = ["webgl", "webgpu"] }
image = "0.25.4"
gloo-timers = { version = "0.3.0", features = ["futures"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"
klingt = { version = "0.3.3", features = ["cpal_sink"] }
rtrb = "0.3.1"
dasp_graph = "0.11.0"
futures = "0.3.31"
pollster = "0.3.0"
console_error_panic_hook = "0.1"
wee_alloc = "0.4.5"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["Performance", "ShadowRoot"] }
lab = "0.11.0"
lazy_static = "1.5.0"
once_cell = "1.19.0"

# gtrom dependencies
clap = { version = "4.5.45", features = ["derive"] }
elf = "0.8.0"
rustc-demangle = "0.1.26"
flate2 = "1"
tar = "0.4"
open = "5"

# gtgo dependencies
ratatui = "0.29.0"
rat-widget = "1.0.5"
rat-theme = "0.27.11"
anyhow = "1.0.99"
crossbeam-channel = "0.5.15"
indexmap = "2.11.1"

# gtld dependencies
serialport = "4.7.2"
dialoguer = "0.11.0"
structopt = "0.3.26"
crc32fast = "1.5.0"
tempfile = "3.20.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
thread-priority = "1.1.0"
