[package]
name = "gametank"
version = "0.17.0"
edition = "2024"
description = "Hardware abstraction layer for the GameTank console"
license = "MIT"
repository = "https://github.com/dwbrite/gametank-sdk"
documentation = "https://docs.rs/gametank"
keywords = ["gametank", "embedded", "no_std", "6502", "gamedev"]
categories = ["embedded", "no-std", "game-development"]

[features]
audio-wavetable-8ch = []
audio-wavetable-7ch-linear = []

[dependencies]
volatile-register = "0.2.2"
bit_field = "0.10.3"
bitflags = "2.9.3"
