[package]
name = "rom"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "none"
opt-level = "z"  # Optimize for size.
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
volatile-register = "0.2.2"
bit_field = "0.10.3"
bitflags = "2.9.3"

[build-dependencies]
audiofw = { path = "../audio" }