[package]
name = "gtgo"
version = "0.10.1"
edition = "2024"
description = "gametank go! the premiere tui toolkit for gametank development"
license = "MIT"
authors = ["Devin Brite <dwbrite@gmail.com>"]
homepage = "https://github.com/dwbrite/gametank-sdk"
repository = "https://github.com/dwbrite/gametank-sdk"

# Exclude from cargo-dist releases
[package.metadata.dist]
dist = false

[dependencies]
ratatui = "0.29.0"
rat-widget = "1.0.5"
rat-theme = "0.27.11"
anyhow = "1.0.99"
crossbeam-channel = "0.5.15"
indexmap = "2.11.1"
