[package]
name = "gtld"
version = "0.10.1"
edition = "2024"
repository = "https://github.com/dwbrite/gametank-sdk"
homepage = "https://github.com/dwbrite/gametank-sdk"
authors = ["Devin Brite <dwbrite@gmail.com>"]

description = "GameTank Loader! For loading gametank roms onto 2M Flash cartridges using the Gametank Cartridge Programmer v4"
license = "MIT"

# Include this package in cargo-dist releases
[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "FB13917F-DCF3-4CF2-8F07-C0419D477E99"
path-guid = "15BDECCE-CA48-4CCA-BE46-56EBFD919674"
license = false
eula = false

[dependencies]

serialport="4.7.2"
dialoguer = "0.11.0"
structopt = "0.3.26"
anyhow = "1.0.99"
crc32fast = "1.5.0"
tempfile = "3.20.0"
