[package]
name = "gtrom"
version = "0.10.1"
edition = "2024"
description = "gametank rom management tool"
license = "MIT"
authors = ["Devin Brite <dwbrite@gmail.com>"]
homepage = "https://github.com/dwbrite/gametank-sdk"
repository = "https://github.com/dwbrite/gametank-sdk"
include = ["src/**/*", "tests/**/*", "Cargo.toml", "README.md", "sdk-template.tar.gz"]

[package.metadata.wix]
license = false
eula = false
upgrade-guid = "C381D7ED-26AF-4F5E-B3E7-F1E4E16E09A0"
path-guid = "2CFFB85F-B80E-43A9-BB30-89516687308D"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
elf = "0.8.0"
rustc-demangle = "0.1.26"
flate2 = "1"
tar = "0.4"

[build-dependencies]

[dev-dependencies]
tempfile = "3.23.0"
