[package]
name = "gte-core"
version = "0.1.2"
edition = "2021"
description = "Core of the GameTank Rust Emulator"
license = "MIT"

[dependencies]
# emulation
gte-w65c02s = { path = "gte-w65c02s" }
gte-acp = { path = "gte-acp" }

rand = { version = "0.8", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6", default-features = false }

bit_field = "0.10.2"
bitfield = "0.14.0"
bytemuck = "1.19.0"

# logging / profiling
log = { version = "0.4", default-features = false }


heapless = "0.8"

# audio sybsystem
rtrb = { version = "0.3", default-features = false, features = [] }
