[package]
name = "gte-core"
version = "0.16.0"
edition = "2021"
description = "Core of the GameTank Rust Emulator"
license = "MIT"
authors = ["Devin Brite <dwbrite@gmail.com>"]
homepage = "https://github.com/dwbrite/gametank-sdk"
repository = "https://github.com/dwbrite/gametank-sdk"

[dependencies]
# emulation
gte-w65c02s = { path = "gte-w65c02s", version = "0.16.0" }
gte-acp = { path = "gte-acp", version = "0.16.0" }

rand = { version = "0.8", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6", default-features = false }

bit_field = "0.10.2"
bitfield = "0.14.0"
bytemuck = "1.19.0"

# logging / profiling
log = { version = "0.4", default-features = false }


heapless = "0.8"

# audio sybsystem
rtrb = { version = "0.3", default-features = false, features = [] }
