[package]
name = "gte"
version = "0.2.1"
edition = "2021"
description = "gametank emulator"
license = "MIT"

# Exclude from cargo-dist releases
[package.metadata.dist]
dist = false

[dependencies]
gte-core = { path = "../core" }

# app shit
winit = { version = "0.30", features = ["rwh_06"] }
#raw-window-handle = "0.6.2"
egui = { version = "0.31" }
egui_extras = "0.31"
egui-wgpu = { version = "0.31",features = ["winit"] }
egui-winit = { version = "0.31", default-features = false, features = ["links", "wayland", "x11"] }
wgpu = { version = "24.0", features = ["webgl", "webgpu"] }
image = "0.25.4"
gloo-timers = { version = "0.3.0", features = ["futures"] }

# emulation


# logging / profiling
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"

# audio sybsystem
firewheel = { version = "0.9.1", features = ["cpal"] }
cpal = "0.14.0"

# async, mostly for wgpu
futures = "0.3.31"
pollster = "0.3.0"

# just wasm things
console_error_panic_hook = "0.1"
wee_alloc = "0.4.5"

wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["Performance", "ShadowRoot"] }

lab = "0.11.0"
lazy_static = "1.5.0"
once_cell = "1.19.0"

[dev-dependencies]
tracing = "0.1.40"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
thread-priority = "1.1.0"

