[package]
name = "gte"
version = "0.10.1"
edition = "2021"
repository = "https://github.com/dwbrite/gametank-sdk"
homepage = "https://github.com/dwbrite/gametank-sdk"
description = "gametank emulator"
license = "MIT"
authors = ["Devin Brite <dwbrite@gmail.com>"]

# Exclude from cargo-dist (use gametank-sdk unified package instead)
[package.metadata.dist]
dist = false

[package.metadata.wix]
upgrade-guid = "9C5D3755-53FA-44B7-BC99-FA72AE4E4159"
path-guid = "9CC1B7BF-48AE-4B38-BF7D-850331F45389"
license = false
eula = false

[dependencies]
gte-core = { path = "../core", version = "0.10.1" }

# app shit
winit = { version = "0.30", features = ["rwh_06"] }
#raw-window-handle = "0.6.2"
egui = { version = "0.31" }
egui_extras = "0.31"
egui-wgpu = { version = "0.31",features = ["winit"] }
egui-winit = { version = "0.31", default-features = false, features = ["links", "wayland", "x11"] }
wgpu = { version = "24.0", features = ["webgl", "webgpu"] }
image = "0.25.4"
gloo-timers = { version = "0.3.0", features = ["futures"] }

# emulation


# logging / profiling
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"

# audio subsystem
klingt = { version = "0.3.3", features = ["cpal_sink"] }
rtrb = "0.3.1"
dasp_graph = "0.11.0"

# async, mostly for wgpu
futures = "0.3.31"
pollster = "0.3.0"

# just wasm things
console_error_panic_hook = "0.1"
wee_alloc = "0.4.5"

wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["Performance", "ShadowRoot"] }

lab = "0.11.0"
lazy_static = "1.5.0"
once_cell = "1.19.0"

[dev-dependencies]
tracing = "0.1.40"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
thread-priority = "1.1.0"

