[package]
name = "gametank-libretro"
version = "0.16.0"
edition = "2021"
description = "GameTank libretro core"
license = "MIT"
authors = ["Devin Brite <dwbrite@gmail.com>"]
homepage = "https://github.com/dwbrite/gametank-sdk"
repository = "https://github.com/dwbrite/gametank-sdk"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
gte-core = { path = "../core", version = "0.16.0" }

[dependencies.libretro-rs]
git = "https://github.com/libretro-rs/libretro-rs"
rev = "c7f414d19d837921b8762656e53e7f1b8f892179"

