[package]
name = "gte-acp"
version = "0.1.0"
edition = "2024"

[dependencies]
# emulation
gte-w65c02s = { path = "../gte-w65c02s" }
# gte-w65c02s = "0.9.3"
# w65c02s = "0.9.2"

# audio sybsystem
petgraph = "0.5.1"
dasp_graph = "0.11.0"
dasp_signal = "0.11.0"
dasp_interpolate = {  version = "0.11.0", features = ["linear", "sinc"] }
rtrb = { version = "0.3", default-features = false, features = [] }

# logging / profiling
log = { version = "0.4", default-features = false }

# idfk
heapless = "0.8"