[package]
name = "gte-acp"
version = "0.16.0"
edition = "2024"
description = "GameTank Audio Coprocessor emulation"
license = "MIT"
authors = ["Devin Brite <dwbrite@gmail.com>"]
homepage = "https://github.com/dwbrite/gametank-sdk"
repository = "https://github.com/dwbrite/gametank-sdk"

[dependencies]
# emulation
gte-w65c02s = { path = "../gte-w65c02s", version = "0.16.0" }
# gte-w65c02s = "0.9.3"
# w65c02s = "0.9.2"

# audio sybsystem
petgraph = "0.5.1"
dasp_graph = "0.11.0"
dasp_signal = "0.11.0"
dasp_interpolate = {  version = "0.11.0", features = ["linear", "sinc"] }
rtrb = { version = "0.3", default-features = false, features = [] }

# logging / profiling
log = { version = "0.4", default-features = false }

# idfk
heapless = "0.8"
